# NetPress

./: .dockerignore  .gitignore  Dockerfile  README.md  environment_ai_gym.yml  pyproject.toml
app-k8s/: README.md  config.template.toml  llm_agent.py  run.py  run_workflow.py
app-malt/: README.md  agent_utils.py  config.template.toml  dy_query_generation.py  llm_model.py  main.py  malt_env.py  run.py  solid_step_helper.py  text_utils.py
app-malt/green_agent/: client_cli.py  green_agent_demo.sh  litellm_a2a_server.py  malt_agent.py  scenario.toml  test_data.jsonl
app-malt/old_code/: llm_model.py
app-route/: README.md  advanced_error_function.py  config.template.toml  llm_model.py  main.py  mininet_install.sh  run.py  test_function.py  topology.py
docs/: AGENTX_ADAPTATION_TODO.md
experiments/: run_app_route.sh
src/netarena/: __init__.py  agent_client.py
